# test_cmake

./: .gitignore  CMakeLists.txt
include/: a.h
src/: main.cpp
